// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshot default 1`] = `
<button
  class="component primary sm"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size lg 1`] = `
<button
  class="component primary lg"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size md 1`] = `
<button
  class="component primary md"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot size sm 1`] = `
<button
  class="component primary sm"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant clear 1`] = `
<button
  class="component clear sm"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant error 1`] = `
<button
  class="component error sm"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant gray 1`] = `
<button
  class="component gray sm"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant primary 1`] = `
<button
  class="component primary sm"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot variant secondary 1`] = `
<button
  class="component secondary sm"
  data-test="Button"
  type="button"
/>
`;

exports[`Button snapshot width 100% 1`] = `
<button
  class="component primary sm width100"
  data-test="Button"
  type="button"
/>
`;
